--- a/src/Packagist/WebBundle/Resources/views/layout.html.twig
+++ b/src/Packagist/WebBundle/Resources/views/layout.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
 
-        <title>{% block title %}Packagist{% endblock %}</title>
+        <title>{% block title %}Private Packages Manager{% endblock %}</title>
         <meta name="description" content="{% block description %}The PHP Package Repository{% endblock %}" />
         <meta name="author" content="Jordi Boggiano" />
         {% block head_canonical %}<meta name="canonical" href="{{ app.request.uri }}" />{% endblock %}
