--- a/src/Packagist/WebBundle/Resources/views/layout.html.twig
+++ b/src/Packagist/WebBundle/Resources/views/layout.html.twig
@@ -174,7 +174,7 @@
             <nav class="container">
                 <div class="row">
                     <ul class="social col-xs-7 col-sm-4 col-md-2 pull-right">
-                        <li><a href="mailto:ppm@exemple.tld" title="{{ 'menu.contact'|trans }}"><span class="icon-mail"></span></a></li>
+                        <li><a href="mailto:{{ contact_mail_address }}" title="{{ 'menu.contact'|trans }}"><span class="icon-mail"></span></a></li>
                     </ul>
 
                     <ul class="col-xs-4 col-md-2">
